src/main/java/org/example/PATHTest/parsercypher/CypherParser.java

package org.example.PATHTest.parsercypher;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CypherParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSIGN=1, ADD_ASSIGN=2, LE=3, GE=4, GT=5, LT=6, NOT_EQUAL=7, EQUAL=8, 
		RANGE=9, SEMI=10, DOT=11, COMMA=12, LPAREN=13, RPAREN=14, LBRACE=15, RBRACE=16, 
		LBRACK=17, RBRACK=18, SUB=19, PLUS=20, DIV=21, MOD=22, CARET=23, MULT=24, 
		ESC=25, COLON=26, STICK=27, DOLLAR=28, CALL=29, YIELD=30, FILTER=31, EXTRACT=32, 
		COUNT=33, EXISTS=34, SIZE=35, ABS=36, SUBSTRING=37, ToIntegerOrNull=38, 
		ToStringOrNull=39, ToBooleanOrNull=40, ToIntegerList=41, ToStringList=42, 
		ToBooleanList=43, NODES=44, RELATIONSHIPS=45, RANGEF=46, KEY=47, TYPE=48, 
		LABELS=49, LENGTH=50, EXISTSF=51, ROUND=52, MIN=53, MAX=54, AVG=55, SUM=56, 
		STARTNODE=57, ENDNODE=58, REDUCE=59, ELEMENTID=60, PROPERTIES=61, ISEMPTY=62, 
		REVERSE=63, COLLECT=64, PERCENTILEDISC=65, STDEVP=66, STDEV=67, ANY=68, 
		NONE=69, SINGLE=70, ALL=71, ASC=72, ASCENDING=73, BY=74, CREATE=75, DELETE=76, 
		DESC=77, DESCENDING=78, DETACH=79, LIMIT=80, MATCH=81, MERGE=82, ON=83, 
		OPTIONAL=84, ORDER=85, REMOVE=86, FOREACH=87, RETURN=88, SET=89, SKIP_W=90, 
		WHERE=91, WITH=92, UNION=93, UNWIND=94, AND=95, AS=96, CONTAINS=97, DISTINCT=98, 
		ENDS=99, IN=100, IS=101, NOT=102, OR=103, STARTS=104, XOR=105, FALSE=106, 
		TRUE=107, NULL_W=108, CONSTRAINT=109, DO=110, FOR=111, REQUIRE=112, UNIQUE=113, 
		CASE=114, WHEN=115, THEN=116, ELSE=117, END=118, MANDATORY=119, SCALAR=120, 
		OF=121, ADD=122, DROP=123, ID=124, ESC_LITERAL=125, CHAR_LITERAL=126, 
		STRING_LITERAL=127, DIGIT=128, FLOAT=129, WS=130, COMMENT=131, LINE_COMMENT=132, 
		ERRCHAR=133, Letter=134;
	public static final int
		RULE_script = 0, RULE_query = 1, RULE_regularQuery = 2, RULE_singleQuery = 3, 
		RULE_returnSt = 4, RULE_withSt = 5, RULE_skipSt = 6, RULE_limitSt = 7, 
		RULE_projectionBody = 8, RULE_projectionItems = 9, RULE_projectionItem = 10, 
		RULE_orderItem = 11, RULE_orderSt = 12, RULE_matchSt = 13, RULE_unwindSt = 14, 
		RULE_readingStatement = 15, RULE_updatingStatement = 16, RULE_deleteSt = 17, 
		RULE_removeSt = 18, RULE_foreachSt = 19, RULE_removeItem = 20, RULE_queryCallSt = 21, 
		RULE_parenExpressionChain = 22, RULE_yieldItems = 23, RULE_yieldItem = 24, 
		RULE_mergeSt = 25, RULE_mergeAction = 26, RULE_setSt = 27, RULE_setItem = 28, 
		RULE_nodeLabels = 29, RULE_createSt = 30, RULE_patternWhere = 31, RULE_where = 32, 
		RULE_pattern = 33, RULE_expression = 34, RULE_xorExpression = 35, RULE_andExpression = 36, 
		RULE_notExpression = 37, RULE_comparisonExpression = 38, RULE_comparisonSigns = 39, 
		RULE_addSubExpression = 40, RULE_multDivExpression = 41, RULE_powerExpression = 42, 
		RULE_unaryAddSubExpression = 43, RULE_atomicExpression = 44, RULE_listExpression = 45, 
		RULE_stringExpression = 46, RULE_stringExpPrefix = 47, RULE_nullExpression = 48, 
		RULE_propertyOrLabelExpression = 49, RULE_propertyExpression = 50, RULE_patternPart = 51, 
		RULE_patternElem = 52, RULE_patternElemChain = 53, RULE_properties = 54, 
		RULE_nodePattern = 55, RULE_atom = 56, RULE_lhs = 57, RULE_relationshipPattern = 58, 
		RULE_relationDetail = 59, RULE_relationshipTypes = 60, RULE_unionSt = 61, 
		RULE_subqueryExist = 62, RULE_subqueryCount = 63, RULE_functionInvocation = 64, 
		RULE_functionname = 65, RULE_parenthesizedExpression = 66, RULE_filterWith = 67, 
		RULE_patternComprehension = 68, RULE_relationshipsChainPattern = 69, RULE_listComprehension = 70, 
		RULE_filterExpression = 71, RULE_countAll = 72, RULE_expressionChain = 73, 
		RULE_caseExpression = 74, RULE_reduceExpression = 75, RULE_parameter = 76, 
		RULE_literal = 77, RULE_rangeLit = 78, RULE_boolLit = 79, RULE_numLit = 80, 
		RULE_stringLit = 81, RULE_charLit = 82, RULE_listLit = 83, RULE_mapLit = 84, 
		RULE_mapPair = 85, RULE_name = 86, RULE_symbol = 87, RULE_reservedWord = 88;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "query", "regularQuery", "singleQuery", "returnSt", "withSt", 
			"skipSt", "limitSt", "projectionBody", "projectionItems", "projectionItem", 
			"orderItem", "orderSt", "matchSt", "unwindSt", "readingStatement", "updatingStatement", 
			"deleteSt", "removeSt", "foreachSt", "removeItem", "queryCallSt", "parenExpressionChain", 
			"yieldItems", "yieldItem", "mergeSt", "mergeAction", "setSt", "setItem", 
			"nodeLabels", "createSt", "patternWhere", "where", "pattern", "expression", 
			"xorExpression", "andExpression", "notExpression", "comparisonExpression", 
			"comparisonSigns", "addSubExpression", "multDivExpression", "powerExpression", 
			"unaryAddSubExpression", "atomicExpression", "listExpression", "stringExpression", 
			"stringExpPrefix", "nullExpression", "propertyOrLabelExpression", "propertyExpression", 
			"patternPart", "patternElem", "patternElemChain", "properties", "nodePattern", 
			"atom", "lhs", "relationshipPattern", "relationDetail", "relationshipTypes", 
			"unionSt", "subqueryExist", "subqueryCount", "functionInvocation", "functionname", 
			"parenthesizedExpression", "filterWith", "patternComprehension", "relationshipsChainPattern", 
			"listComprehension", "filterExpression", "countAll", "expressionChain", 
			"caseExpression", "reduceExpression", "parameter", "literal", "rangeLit", 
			"boolLit", "numLit", "stringLit", "charLit", "listLit", "mapLit", "mapPair", 
			"name", "symbol", "reservedWord"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'+='", "'<='", "'>='", "'>'", "'<'", "'<>'", "'=='", "'..'", 
			"';'", "'.'", "','", "'('", "')'", "'{'", "'}'", "'['", "']'", "'-'", 
			"'+'", "'/'", "'%'", "'^'", "'*'", "'`'", "':'", "'|'", "'$'", "'CALL'", 
			"'YIELD'", "'FILTER'", "'EXTRACT'", "'COUNT'", "'EXISTS'", "'size'", 
			"'abs'", "'substring'", "'toIntegerOrNull'", "'toStringOrNull'", "'toBooleanOrNull'", 
			"'toIntegerList'", "'toStringList'", "'toBooleanList'", "'nodes'", "'relationships'", 
			"'range'", "'keys'", "'type'", "'labels'", "'length'", "'exists'", "'round'", 
			"'min'", "'max'", "'avg'", "'sum'", "'startNode'", "'endNode'", "'reduce'", 
			"'elementId'", "'properties'", "'isEmpty'", "'reverse'", "'collect'", 
			"'percentileDisc'", "'stDevP'", "'stDev'", "'ANY'", "'NONE'", "'SINGLE'", 
			"'ALL'", "'ASC'", "'ASCENDING'", "'BY'", "'CREATE'", "'DELETE'", "'DESC'", 
			"'DESCENDING'", "'DETACH'", "'LIMIT'", "'MATCH'", "'MERGE'", "'ON'", 
			"'OPTIONAL'", "'ORDER'", "'REMOVE'", "'FOREACH'", "'RETURN'", "'SET'", 
			"'SKIP'", "'WHERE'", "'WITH'", "'UNION'", "'UNWIND'", "'AND'", "'AS'", 
			"'CONTAINS'", "'DISTINCT'", "'ENDS'", "'IN'", "'IS'", "'NOT'", "'OR'", 
			"'STARTS'", "'XOR'", "'FALSE'", "'TRUE'", "'NULL'", "'CONSTRAINT'", "'DO'", 
			"'FOR'", "'REQUIRE'", "'UNIQUE'", "'CASE'", "'WHEN'", "'THEN'", "'ELSE'", 
			"'END'", "'MANDATORY'", "'SCALAR'", "'OF'", "'ADD'", "'DROP'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ASSIGN", "ADD_ASSIGN", "LE", "GE", "GT", "LT", "NOT_EQUAL", "EQUAL", 
			"RANGE", "SEMI", "DOT", "COMMA", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
			"LBRACK", "RBRACK", "SUB", "PLUS", "DIV", "MOD", "CARET", "MULT", "ESC", 
			"COLON", "STICK", "DOLLAR", "CALL", "YIELD", "FILTER", "EXTRACT", "COUNT", 
			"EXISTS", "SIZE", "ABS", "SUBSTRING", "ToIntegerOrNull", "ToStringOrNull", 
			"ToBooleanOrNull", "ToIntegerList", "ToStringList", "ToBooleanList", 
			"NODES", "RELATIONSHIPS", "RANGEF", "KEY", "TYPE", "LABELS", "LENGTH", 
			"EXISTSF", "ROUND", "MIN", "MAX", "AVG", "SUM", "STARTNODE", "ENDNODE", 
			"REDUCE", "ELEMENTID", "PROPERTIES", "ISEMPTY", "REVERSE", "COLLECT", 
			"PERCENTILEDISC", "STDEVP", "STDEV", "ANY", "NONE", "SINGLE", "ALL", 
			"ASC", "ASCENDING", "BY", "CREATE", "DELETE", "DESC", "DESCENDING", "DETACH", 
			"LIMIT", "MATCH", "MERGE", "ON", "OPTIONAL", "ORDER", "REMOVE", "FOREACH", 
			"RETURN", "SET", "SKIP_W", "WHERE", "WITH", "UNION", "UNWIND", "AND", 
			"AS", "CONTAINS", "DISTINCT", "ENDS", "IN", "IS", "NOT", "OR", "STARTS", 
			"XOR", "FALSE", "TRUE", "NULL_W", "CONSTRAINT", "DO", "FOR", "REQUIRE", 
			"UNIQUE", "CASE", "WHEN", "THEN", "ELSE", "END", "MANDATORY", "SCALAR", 
			"OF", "ADD", "DROP", "ID", "ESC_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", 
			"DIGIT", "FLOAT", "WS", "COMMENT", "LINE_COMMENT", "ERRCHAR", "Letter"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CypherParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CypherParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CypherParser.EOF, 0); }
		public TerminalNode SEMI() { return getToken(CypherParser.SEMI, 0); }
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			query();
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(179);
				match(SEMI);
				}
			}

			setState(182);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QueryContext extends ParserRuleContext {
		public RegularQueryContext regularQuery() {
			return getRuleContext(RegularQueryContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(184);
				regularQuery();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegularQueryContext extends ParserRuleContext {
		public SingleQueryContext singleQuery() {
			return getRuleContext(SingleQueryContext.class,0);
		}
		public List<UnionStContext> unionSt() {
			return getRuleContexts(UnionStContext.class);
		}
		public UnionStContext unionSt(int i) {
			return getRuleContext(UnionStContext.class,i);
		}
		public RegularQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regularQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterRegularQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitRegularQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitRegularQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegularQueryContext regularQuery() throws RecognitionException {
		RegularQueryContext _localctx = new RegularQueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_regularQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			singleQuery();
			setState(191);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==UNION) {
				{
				{
				setState(188);
				unionSt();
				}
				}
				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SingleQueryContext extends ParserRuleContext {
		public List<ReadingStatementContext> readingStatement() {
			return getRuleContexts(ReadingStatementContext.class);
		}
		public ReadingStatementContext readingStatement(int i) {
			return getRuleContext(ReadingStatementContext.class,i);
		}
		public List<UpdatingStatementContext> updatingStatement() {
			return getRuleContexts(UpdatingStatementContext.class);
		}
		public UpdatingStatementContext updatingStatement(int i) {
			return getRuleContext(UpdatingStatementContext.class,i);
		}
		public List<WithStContext> withSt() {
			return getRuleContexts(WithStContext.class);
		}
		public WithStContext withSt(int i) {
			return getRuleContext(WithStContext.class,i);
		}
		public ReturnStContext returnSt() {
			return getRuleContext(ReturnStContext.class,0);
		}
		public SingleQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterSingleQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitSingleQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitSingleQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleQueryContext singleQuery() throws RecognitionException {
		SingleQueryContext _localctx = new SingleQueryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_singleQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CALL || ((((_la - 75)) & ~0x3f) == 0 && ((1L << (_la - 75)) & 678611L) != 0)) {
				{
				setState(197);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CALL:
				case MATCH:
				case OPTIONAL:
				case UNWIND:
					{
					setState(194);
					readingStatement();
					}
					break;
				case CREATE:
				case DELETE:
				case DETACH:
				case MERGE:
				case REMOVE:
				case FOREACH:
				case SET:
					{
					setState(195);
					updatingStatement();
					}
					break;
				case WITH:
					{
					setState(196);
					withSt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(203);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN) {
				{
				setState(202);
				returnSt();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnStContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(CypherParser.RETURN, 0); }
		public ProjectionBodyContext projectionBody() {
			return getRuleContext(ProjectionBodyContext.class,0);
		}
		public ReturnStContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnSt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterReturnSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitReturnSt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitReturnSt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStContext returnSt() throws RecognitionException {
		ReturnStContext _localctx = new ReturnStContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_returnSt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(205);
			match(RETURN);
			setState(206);
			projectionBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
